# adam

./: Cargo.toml  README.md  pyproject.toml
benches/: benches.rs
src/: adam_rs.rs  lib.rs  main.rs
