[package]
name = "adam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "adam"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.23.3"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "benches" 
harness = false      
